--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,76 @@
 body {
-	background: #141414;
-	color: #ffffff;
-}
-
-.movie-app > .row {
-	overflow-x: auto;
-	flex-wrap: nowrap;
-}
-
-.image-container {
-	position: relative;
-	transition: transform 0.2s;
-}
-
-.image-container:hover {
-	cursor: pointer;
-	transform: scale(1.1);
-}
-
-.image-container:hover .overlay {
-	opacity: 1;
-}
-
-.overlay {
-	position: absolute;
-	background: rgba(0, 0, 0, 0.8);
-	width: 100%;
-	transition: 0.5s ease;
-	opacity: 0;
-	bottom: 0;
-	font-size: 20px;
-	padding: 20px;
+	font-family: sans-serif;
 	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	min-height: 100vh;
+}
+
+.app-container {
+	height: 400px;
+	width: 300px;
+	background: #2b5870;
+	border-radius: 20px;
+	box-shadow: 10px 10px 38px 0px rgba(0, 0, 0, 0.75);
+}
+
+.temperature-display-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 70%;
+}
+
+.temperature-display {
+	display: flex;
+	border-radius: 50%;
+	color: #ffffff;
+	height: 220px;
+	width: 220px;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	font-size: 48px;
+	border: 3px #ffffff solid;
+	transition: background 0.5s;
+}
+
+button {
+	border-radius: 100px;
+	height: 80px;
+	width: 80px;
+	font-size: 32px;
+	color: #ffffff;
+	background: rgb(105, 104, 104);
+	border: 2px #ffffff solid;
+}
+
+button:hover {
+	background: rgb(184, 184, 184);
+	cursor: pointer;
+}
+
+button:focus {
+	outline: 0;
+}
+
+.button-container {
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+.neutral {
+	background: rgb(184, 184, 184);
+}
+
+.cold {
+	background: #035aa6;
+}
+
+.hot {
+	background: #ff5200;
 }
